--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   box-sizing: border-box;
 }
 
-body {
+body {  /*
   background-color: #474e5d;
-  font-family: Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;  
+  */
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -37,7 +38,7 @@ body {
   padding: 10px 40px;
   position: relative;
   background-color: inherit;
-  width: 90%;
+  width: 70%;
 }
 
 /* The circles on the timeline */
