--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body {  /*
   background-color: #474e5d;
   font-family: Helvetica, sans-serif;  
   */
+  theme: jekyll-theme-cayman;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -226,7 +227,6 @@ table.center {
 
 <script>
     document.getElementById("year").style.color = "blue";
-    document.getElementById("yr").style.backgroundcolor = "white";
     document.getElementById("date").style.color = "purple";   
 </script>
 
