--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
   box-sizing: border-box;
 }
 
-body {  /*
+body {  
   background-color: #474e5d;
   font-family: Helvetica, sans-serif;  
-  */
-  theme: jekyll-theme-cayman;
 }
 
 /* The actual timeline (the vertical ruler) */
